<resources>
    <string name="app_name" translatable="false">Drugs Home</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="new_user">New user</string>
    <string name="email">Email</string>
    <string name="no_data_found">no data found</string>
    <string name="you_must_open_gps_to_get_your_location_info">you must open GPS to get your location info</string>
    <string name="you_must_allow_permission_to_continue">you must allow permission to continue</string>
    <string name="permission_denied">Permission denied</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="ask_again">Ask again</string>
    <string name="ignore">Ignore</string>
    <string name="gps_disabled">GPS Disabled!</string>
    <string name="warning">WARNING!</string>
    <string name="missing_perm_msg">you need to allow permission</string>
    <string name="open_settings">Open settings</string>
    <string name="language">Language</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="programming_and_design">Programming and Design</string>
    <string name="grand_site" translatable="false">www.2grand.net</string>
    <string name="grand_phone" translatable="false">+0201157771069</string>
    <string name="call">call</string>
    <string name="whatsapp">whatsapp</string>
    <string name="exit">Exit</string>
    <string name="phone">Phone</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_in_with_name_amp_password"><![CDATA[Sign in with name & password]]></string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_account">Create Account</string>
    <string name="skip_login">Skip Login</string>
    <string name="sign_in_with_phone">Sign in with phone</string>
    <string name="sign_up">Signup</string>
    <string name="check_input_message">Check input message</string>
    <string name="complete_register">Complete register</string>
    <string name="verification_code">Verification code</string>
    <string name="resend_code">Resend code</string>
    <string name="exit_warning">are you sure you want to exit the app?</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="profile">Profile</string>
    <string name="notification">Notification</string>
    <string name="my_orders">My orders</string>
    <string name="rate">Rate app</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about_us">About us</string>
    <string name="provide_service_login">Provide service login</string>
    <string name="log_out">Logout</string>
    <string name="new_account">New Account</string>
    <string name="write_your_phone">write your phone number</string>
    <string name="current_address">Current address:</string>
    <string name="update">Update</string>
    <string name="name">Name</string>
    <string name="logout_warning">are you sure you want to logout?</string>
    <string name="choose_service">Choose Service</string>
    <string name="schedule">Schedule</string>
    <string name="urgent">Urgent</string>
    <string name="create_order">Create Order</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="order_now">Order now</string>
    <string name="enter_name">Enter name</string>
    <string name="fill_required_data_plz">Fill the required data please</string>
    <string name="pending">Pending</string>
    <string name="other">Other</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="guarantee_number">Guarntee Number</string>
    <string name="finish">Finish</string>
    <string name="iqd">IQD</string>
    <string name="rate_">Rate:</string>
    <string name="cost">Cost:</string>
    <string name="payment">Payment</string>
    <string name="submit">Submit</string>
    <string name="pay_on_delivery">Cash on delivery</string>
    <string name="pay_online">Payment online</string>
    <string name="description_">Description:</string>
    <string name="date_">Date:</string>
    <string name="time_">Time:</string>
    <string name="location_">Location:</string>
    <string name="apply">Apply</string>
    <string name="write_the_cost_please">Write the cost please,</string>
    <string name="order_details">Order Details</string>
    <string name="chat">chat</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="select_days_">Select days:</string>
    <string name="select_time_">Select time:</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="time_table">Time table</string>
    <string name="title_activity_maps">Map</string>
    <string name="card_name">Card name</string>
    <string name="points">Points</string>
    <string name="favourite">Favourite</string>
    <string name="cart">Cart</string>
    <string name="packing_card">Packing card</string>
    <string name="be_delegate">Be a delegate</string>
    <string name="be_shipping_company">Be a shipping company</string>
    <string name="be_a_drive">Be a drive</string>
    <string name="packing_card_location">Packing card location</string>
    <string name="contact_us">Contact us</string>
    <string name="suggestion_and_complain"><![CDATA[Suggestions&Complain]]></string>
    <string name="new_password">New password</string>
    <string name="new_password_confirm">New password confirm</string>
    <string name="kurdish">Kurdish</string>
    <string name="select_your_country_">Select your country:</string>
    <string name="select_your_language_">Select app language:</string>
    <string name="turn_on_your_location">turn on your location</string>
    <string name="turn_location_on_bio">To continues, let your device turn on location, which uses Google’s location service</string>
    <string name="yes_turn_it_on">yes turn it on</string>
    <string name="skip">Skip</string>
    <string name="follow">follow</string>
    <string name="shops">Shops</string>
    <string name="department">Department</string>
    <string name="departments">Departments</string>
    <string name="products">Products</string>
    <string name="enter_password_to_continue">enter password to continue</string>
    <string name="store_locked">Store Locked</string>
    <string name="title_activity_scrolling" translatable="false">ScrollingActivity</string>
    <string name="questions">Questions</string>
    <string name="house">House</string>
    <string name="add">Add</string>
    <string name="do_exam">Do Exam</string>
    <string name="send">Send</string>
    <string name="learn_to_improve_ur_language">Learn to improve ur language</string>
    <string name="learn_words_or_sentences">learn words or setences</string>
    <string name="sentences">sentences</string>
    <string name="words">words</string>
    <string name="search">Search</string>
    <string name="exam_to_improve_ur_language">exam to improve your language</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="alternative">Alternative</string>
    <string name="composition">Composition</string>
    <string name="contraindications">contraindications</string>
    <string name="precautions">precautions</string>
    <string name="pregnancy">pregnancy</string>
    <string name="interactions">interactions</string>
    <string name="side_effects">side effects</string>
    <string name="indication">indication</string>
</resources>