<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_bell"
            android:title="@string/notification"/>


        <item
            android:id="@+id/nav_question"
            android:icon="@drawable/ic_question_mark"
            android:title="@string/questions"/>


        <item
            android:id="@+id/nav_house"
            android:icon="@drawable/ic_house_care"
            android:title="@string/house"/>


        <item
            android:id="@+id/nav_add"
            android:icon="@drawable/ic_add"
            android:title="@string/add"/>


        <item
            android:id="@+id/nav_rewards"
            android:icon="@drawable/ic_trophy"
            android:title="@string/notification"/>

    </group>

</menu>