<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.ui.fragment.detail.LearnFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        >

        <TextView
            android:id="@+id/tv_learn_static"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/learn_to_improve_ur_language"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_container"
            style="@style/ContainerCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp16h"
            app:layout_constraintTop_toBottomOf="@id/tv_learn_static">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TextView
                    android:id="@+id/tv_title_static"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/learn_words_or_sentences"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rb_words"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp8w"
                    android:buttonTint="@color/white"
                    android:checked="@{viewModel.obsIsWords}"
                    android:onClick="@{()->viewModel.onRadioButtonsClick(true)}"
                    android:textColor="@color/white"
                    android:text="@string/words"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintEnd_toStartOf="@+id/rb_sentences"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_title_static" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rb_sentences"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp8w"
                    android:buttonTint="@color/white"
                    android:checked="@{viewModel.obsIsWords}"
                    android:onClick="@{()->viewModel.onRadioButtonsClick(false)}"
                    android:text="@string/sentences"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_title_static" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_search"
                    style="@style/SubmitButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/search"
                    android:layout_marginTop="@dimen/dp16h"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rb_sentences" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/tv_exam_static"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/exam_to_improve_ur_language"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/dp16h"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_container"/>



        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_exam"
            style="@style/SubmitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/do_exam"
            android:layout_marginTop="@dimen/dp16h"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_exam_static" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <data>
        <variable
            name="viewModel"
            type="maymanm.drugsapp.viewmodel.fragment.main.LearnViewModel" />
    </data>
</layout>